--- a/date/2025-09/page-2.htm
+++ b/date/2025-09/page-2.htm
@@ -287,16 +287,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-25-free-high-speed-nodes.htm" title="免费Clash SSR - 9月25日20M/S|免费Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点节点订阅分享">免费Clash SSR - 9月25日20M/S|免费Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-15-free-v2ray.htm" title="免费Clash SSR - 9月15日18.9M/S|免费Shadowrocket节点/SSR/Clash节点/V2ray节点订阅分享">免费Clash SSR - 9月15日18.9M/S|免费Shadowrocket节点/SSR/Clash节点/V2ray节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-13-free-v2ray.htm" title="免费Clash SSR - 9月13日22.5M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray节点订阅分享">免费Clash SSR - 9月13日22.5M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-28-free-v2ray.htm" title="免费Clash SSR - 9月28日23M/S|免费Shadowrocket节点/Clash节点/SSR节点/V2ray节点/Singbox节点节点订阅分享">免费Clash SSR - 9月28日23M/S|免费Shadowrocket节点/Clash节点/SSR节点/V2ray节点/Singbox节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-9-free-high-speed-nodes.htm" title="免费Clash SSR - 10月9日20.6M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点节点订阅分享">免费Clash SSR - 10月9日20.6M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-154698.htm" title="Shadowrocket免费账号获取与使用完全指南：解锁网络自由的全方位攻略">Shadowrocket免费账号获取与使用完全指南：解锁网络自由的全方位攻略</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-19-free-subscribe-node.htm" title="免费Clash SSR - 9月19日18.5M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅分享">免费Clash SSR - 9月19日18.5M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-153605.htm" title="苹果设备上的Vmess协议全攻略：从下载到配置的完整指南">苹果设备上的Vmess协议全攻略：从下载到配置的完整指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-26-free-v2ray-subscribe.htm" title="免费Clash SSR - 9月26日18M/S|免费SSR节点/Shadowrocket节点/Clash节点/Singbox节点/V2ray节点节点订阅分享">免费Clash SSR - 9月26日18M/S|免费SSR节点/Shadowrocket节点/Clash节点/Singbox节点/V2ray节点节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-12-node-share-links.htm" title="免费Clash SSR - 10月12日20M/S|免费Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点节点订阅分享">免费Clash SSR - 10月12日20M/S|免费Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-5-free-node-subscribe.htm" title="免费Clash SSR - 10月5日21M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点节点订阅分享">免费Clash SSR - 10月5日21M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-7-free-subscribe-node.htm" title="免费Clash SSR - 10月7日18.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享">免费Clash SSR - 10月7日18.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-24-node-share-links.htm" title="免费Clash SSR - 9月24日18.4M/S|免费SSR节点/Clash节点/Shadowrocket节点/Singbox节点/V2ray节点节点订阅分享">免费Clash SSR - 9月24日18.4M/S|免费SSR节点/Clash节点/Shadowrocket节点/Singbox节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-19-free-subscribe-node.htm" title="免费Clash SSR - 9月19日18.5M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅分享">免费Clash SSR - 9月19日18.5M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-153962.htm" title="在CentOS 6上搭建V2Ray代理：一份面向老旧系统的完整解决方案">在CentOS 6上搭建V2Ray代理：一份面向老旧系统的完整解决方案</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-17-free-v2ray.htm" title="免费Clash SSR - 10月17日20.8M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点节点订阅分享">免费Clash SSR - 10月17日20.8M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-10-node-share.htm" title="免费Clash SSR - 10月10日18.7M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点节点订阅分享">免费Clash SSR - 10月10日18.7M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-14-free-high-speed-nodes.htm" title="免费Clash SSR - 9月14日22.3M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash节点订阅分享">免费Clash SSR - 9月14日22.3M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -308,7 +308,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
