--- a/date/2025-10/page-2.htm
+++ b/date/2025-10/page-2.htm
@@ -137,6 +137,90 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-08">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-8-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/c8e6376117c27d8b3bcf0302b91cbd97.webp" alt="免费Clash SSR - 10月8日23M/S|免费Clash节点/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-8-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 10月8日23M/S|免费Clash节点/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了美国、欧洲、香港、加拿大、日本、新加坡、韩国等地区,最高速度可达23 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-07">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-7-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/7f6af7867bc39696f3d2707a3146a366.webp" alt="免费Clash SSR - 10月7日18.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-7-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 10月7日18.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了香港、韩国、欧洲、加拿大、日本、美国、新加坡等地区,最高速度可达18.5 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-06">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-6-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/c94474226b24ec9caf8b44f650d14f51.webp" alt="免费Clash SSR - 10月6日22.7M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-6-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 10月6日22.7M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了韩国、加拿大、香港、日本、美国、新加坡、欧洲等地区,最高速度可达22.7 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-05">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-5-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/882ee8810af2265fc981e697f5d3716a.webp" alt="免费Clash SSR - 10月5日21M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-5-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 10月5日21M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了美国、新加坡、加拿大、韩国、香港、日本、欧洲等地区,最高速度可达21 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-04">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-4-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/e890e73aa6daf2aed8f18dde405a07b2.webp" alt="免费Clash SSR - 10月4日18.4M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-4-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 10月4日18.4M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了韩国、美国、欧洲、日本、新加坡、加拿大、香港等地区,最高速度可达18.4 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-03">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-3-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/882ee8810af2265fc981e697f5d3716a.webp" alt="免费Clash SSR - 10月3日22.5M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-3-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 10月3日22.5M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了加拿大、美国、新加坡、香港、日本、韩国、欧洲等地区,最高速度可达22.5 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-10-02">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-10-2-free-v2ray.htm" class="xcblog-blog-url">
@@ -175,16 +259,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-14-free-high-speed-nodes.htm" title="免费Clash SSR - 9月14日22.3M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash节点订阅分享">免费Clash SSR - 9月14日22.3M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-4-free-node-subscribe-links.htm" title="免费Clash SSR - 10月4日18.4M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点节点订阅分享">免费Clash SSR - 10月4日18.4M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-154332.htm" title="深度解析：Shadowrocket无法连接的全面诊断与高效修复指南">深度解析：Shadowrocket无法连接的全面诊断与高效修复指南</a></li>
-                        <li class="py-2"><a href="/news/article-154698.htm" title="Shadowrocket免费账号获取与使用完全指南：解锁网络自由的全方位攻略">Shadowrocket免费账号获取与使用完全指南：解锁网络自由的全方位攻略</a></li>
-                        <li class="py-2"><a href="/news/article-153962.htm" title="在CentOS 6上搭建V2Ray代理：一份面向老旧系统的完整解决方案">在CentOS 6上搭建V2Ray代理：一份面向老旧系统的完整解决方案</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-13-free-v2ray.htm" title="免费Clash SSR - 9月13日22.5M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray节点订阅分享">免费Clash SSR - 9月13日22.5M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-24-node-share-links.htm" title="免费Clash SSR - 9月24日18.4M/S|免费SSR节点/Clash节点/Shadowrocket节点/Singbox节点/V2ray节点节点订阅分享">免费Clash SSR - 9月24日18.4M/S|免费SSR节点/Clash节点/Shadowrocket节点/Singbox节点/V2ray节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-19-free-subscribe-node.htm" title="免费Clash SSR - 9月19日18.5M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅分享">免费Clash SSR - 9月19日18.5M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-10-node-share.htm" title="免费Clash SSR - 10月10日18.7M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点节点订阅分享">免费Clash SSR - 10月10日18.7M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-153236.htm" title="天行科学上网全攻略：解锁网络自由与安全浏览的终极指南">天行科学上网全攻略：解锁网络自由与安全浏览的终极指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-22-free-v2ray.htm" title="免费Clash SSR - 9月22日22.9M/S|免费SSR/V2ray节点/Clash节点/Shadowrocket节点订阅分享">免费Clash SSR - 9月22日22.9M/S|免费SSR/V2ray节点/Clash节点/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-8-free-node-subscribe.htm" title="免费Clash SSR - 10月8日23M/S|免费Clash节点/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点节点订阅分享">免费Clash SSR - 10月8日23M/S|免费Clash节点/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点节点订阅分享</a></li>
                         <li class="py-2"><a href="/news/article-153605.htm" title="苹果设备上的Vmess协议全攻略：从下载到配置的完整指南">苹果设备上的Vmess协议全攻略：从下载到配置的完整指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-28-free-v2ray.htm" title="免费Clash SSR - 9月28日23M/S|免费Shadowrocket节点/Clash节点/SSR节点/V2ray节点/Singbox节点节点订阅分享">免费Clash SSR - 9月28日23M/S|免费Shadowrocket节点/Clash节点/SSR节点/V2ray节点/Singbox节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-7-free-subscribe-node.htm" title="免费Clash SSR - 10月7日18.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享">免费Clash SSR - 10月7日18.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-30-node-share-links.htm" title="免费Clash SSR - 9月30日20.1M/S|免费V2ray节点/Singbox节点/Clash节点/SSR节点/Shadowrocket节点节点订阅分享">免费Clash SSR - 9月30日20.1M/S|免费V2ray节点/Singbox节点/Clash节点/SSR节点/Shadowrocket节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-24-node-share-links.htm" title="免费Clash SSR - 9月24日18.4M/S|免费SSR节点/Clash节点/Shadowrocket节点/Singbox节点/V2ray节点节点订阅分享">免费Clash SSR - 9月24日18.4M/S|免费SSR节点/Clash节点/Shadowrocket节点/Singbox节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-15-free-high-speed-nodes.htm" title="免费Clash SSR - 10月15日21.1M/S|免费Singbox节点/Shadowrocket节点/SSR节点/V2ray节点/Clash节点节点订阅分享">免费Clash SSR - 10月15日21.1M/S|免费Singbox节点/Shadowrocket节点/SSR节点/V2ray节点/Clash节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-16-node-share-links.htm" title="免费Clash SSR - 9月16日20.8M/S|免费V2ray节点/SSR/Clash节点/Shadowrocket节点订阅分享">免费Clash SSR - 9月16日20.8M/S|免费V2ray节点/SSR/Clash节点/Shadowrocket节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -196,7 +280,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
