--- a/free-nodes/2025-10-11-node-share-links.htm
+++ b/free-nodes/2025-10-11-node-share-links.htm
@@ -199,16 +199,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-153236.htm" title="天行科学上网全攻略：解锁网络自由与安全浏览的终极指南">天行科学上网全攻略：解锁网络自由与安全浏览的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-153962.htm" title="在CentOS 6上搭建V2Ray代理：一份面向老旧系统的完整解决方案">在CentOS 6上搭建V2Ray代理：一份面向老旧系统的完整解决方案</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-4-free-node-subscribe-links.htm" title="免费Clash SSR - 10月4日18.4M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点节点订阅分享">免费Clash SSR - 10月4日18.4M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-7-free-subscribe-node.htm" title="免费Clash SSR - 10月7日18.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享">免费Clash SSR - 10月7日18.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-6-node-share-links.htm" title="免费Clash SSR - 10月6日22.7M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点节点订阅分享">免费Clash SSR - 10月6日22.7M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-3-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 10月3日22.5M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点节点订阅分享">免费Clash SSR - 10月3日22.5M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-17-free-high-speed-nodes.htm" title="免费Clash SSR - 9月17日22.6M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray节点订阅分享">免费Clash SSR - 9月17日22.6M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-2-free-v2ray.htm" title="免费Clash SSR - 10月2日20.9M/S|免费V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点节点订阅分享">免费Clash SSR - 10月2日20.9M/S|免费V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-30-node-share-links.htm" title="免费Clash SSR - 9月30日20.1M/S|免费V2ray节点/Singbox节点/Clash节点/SSR节点/Shadowrocket节点节点订阅分享">免费Clash SSR - 9月30日20.1M/S|免费V2ray节点/Singbox节点/Clash节点/SSR节点/Shadowrocket节点节点订阅分享</a></li>
                         <li class="py-2"><a href="/news/article-154332.htm" title="深度解析：Shadowrocket无法连接的全面诊断与高效修复指南">深度解析：Shadowrocket无法连接的全面诊断与高效修复指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-18-free-node-subscribe-links.htm" title="免费Clash SSR - 9月18日19M/S|免费Shadowrocket节点/SSR/Clash节点/V2ray节点订阅分享">免费Clash SSR - 9月18日19M/S|免费Shadowrocket节点/SSR/Clash节点/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-8-free-node-subscribe.htm" title="免费Clash SSR - 10月8日23M/S|免费Clash节点/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点节点订阅分享">免费Clash SSR - 10月8日23M/S|免费Clash节点/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-7-free-subscribe-node.htm" title="免费Clash SSR - 10月7日18.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享">免费Clash SSR - 10月7日18.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-20-node-share-links.htm" title="免费Clash SSR - 9月20日19.1M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray节点订阅分享">免费Clash SSR - 9月20日19.1M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-15-free-v2ray.htm" title="免费Clash SSR - 9月15日18.9M/S|免费Shadowrocket节点/SSR/Clash节点/V2ray节点订阅分享">免费Clash SSR - 9月15日18.9M/S|免费Shadowrocket节点/SSR/Clash节点/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-18-node-share-links.htm" title="免费Clash SSR - 10月18日23M/S|免费Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点节点订阅分享">免费Clash SSR - 10月18日23M/S|免费Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-6-node-share-links.htm" title="免费Clash SSR - 10月6日22.7M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点节点订阅分享">免费Clash SSR - 10月6日22.7M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-16-node-share-links.htm" title="免费Clash SSR - 10月16日19.4M/S|免费V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点节点订阅分享">免费Clash SSR - 10月16日19.4M/S|免费V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -220,7 +220,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
